Refactor: clean code, remove DB layer, and enforce strict Hexagonal Architecture